css/about.css
h1{
    display: none;
    text-decoration: underline;
}

h2{
    color: var(--pink);
    margin-bottom: 20px;
    text-align: center;
}

h2::after,
h2::before{
    content: "";
    width: 20%;
    height: 2px;
    display: inline-block;
    margin: 0 10px;
}

h2::after{
    background: linear-gradient(to left, transparent, var(--aqua));
}
h2::before{
    background: linear-gradient(to right, transparent, var(--aqua));
}

h3{
    color: var(--pink);
    text-decoration: underline;
}

.intro p{
    color: var(--aqua);
    line-height: 1.6;
    margin-bottom: 10px;
}

.about-layout{
    max-width: 90%;
    margin: 0 auto;
    padding-top: 100px; 
    padding-left: 40px;
    padding-right: 40px;
}


.panel{
    background: rgba(10, 0, 30, 0.6);
    border: 1px solid var(--aqua-trans);
    border-radius: 10px;
    padding: 20px;

    box-shadow:
    0 0 10px var(--aqua-trans),
    inset 0 0 10px rgba(0,0,0,0.5);
    backdrop-filter: blur(6px);
}

#about-me{
    min-height: 420px;
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    gap: 40px;
    align-items: stretch;
    margin-bottom: 20px;
}

#profile,
#left{
    height:100%;
    display:flex;
}

#portrait,
#container-music{
    width:100%;
    height:auto;
    backdrop-filter: blur(12px);
    border: 1px solid var(--aqua);
    border-radius: 20px;
    box-shadow: 0 0 20px var(--aqua-light);
    border-radius: 10px;
    overflow: hidden;
    transition: 0.4s ease;
}

#portrait:hover,
#container-music:hover{
    transform: scale(1.01);
    box-shadow: 0 0 50px var(--aqua);
}

#img-self-portrait{
    width:100%;
    height:100%;
    object-fit:cover;
}

#img-self-portrait{
  width: 100%;
  height: 100%;
  object-fit: cover;
}

#container-music{
    height: 100%;
    background:linear-gradient(
        to bottom,
        rgba(255,255,255,0.03),
        rgba(0,0,0,0.35)
        );
    backdrop-filter: blur(12px);
    border: 1px solid var(--aqua);
    border-radius: 20px;
    box-shadow: 0 0 20px var(--aqua-light);
    overflow: hidden;
    transition: 0.4s ease;
}

#music-player{
    width: 100%;
    height: 100%;
    display:flex;
    flex-direction:column;
    justify-content:center;
    align-items:center;
    gap:15px;
    padding:20px;
}

#song-image{
    width: 70%;
    object-fit: contain;
    border: 1px solid var(--sun-pink);
    border-radius: 10px;
    overflow: hidden;
}

#song-name{
    font-size: 2rem;
    color: var(--sun-pink);

    text-shadow:
        0 0 6px var(--sun-pink),
        0 0 20px var(--sun-pink);
}

#current-time,
#total-time{
    font-size: 0.9rem;
    color: var(--aqua-light);
}

#song-slider{
    width: 90%;
    cursor: pointer;
    accent-color: var(--aqua);
}

#music-buttons{
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 24px;
    gap: 20px;
    margin: 0;
    color: var(--aqua);
}

#music-buttons i{
    cursor: pointer;
    transition: 0.25s;
    text-shadow: 0 0 10px var(--aqua);
}

#music-buttons i:hover{
    transform: scale(1.2);
    color: var(--sun-pink);
    text-shadow:
        0 0 10px var(--sun-pink),
        0 0 25px var(--sun-pink);
}

.skill-ref{
    position: relative;
    display:grid;
    grid-template-columns: 2fr 1fr;
    gap:40px;
    margin-bottom:20px;
}


#skill-grid{
    display: grid;
    grid-template-columns: repeat(3,1fr);
    gap: 25px;
}

.skill-card{
    padding: 10px;
    border: 1px solid var(--aqua-trans);
    border-radius: 8px;
    box-shadow: 0 0 10px var(--aqua-trans);
}


.skill-card h3{
    color: var(--aqua);
    margin-bottom: 10px;
}

.skill-card ul{
    list-style: none;
    padding: 0;
}

.skill-card li{
    margin-bottom: 6px;
    color: white;
    display: flex;
    justify-content: space-between;
    align-items: center;
    transition:0.25s ease-in-out;
}

.skill-card li:hover{
    transform: scale(1.01);
    color: var(--sun-pink);
    text-shadow:
        0 0 10px var(--sun-pink),
        0 0 25px var(--sun-pink);
}

.skill-card li i{
    font-size: 1.5rem;
    color: var(--aqua);
}

.job-title{
    font-style: bold;
    color: var(--aqua-light);
    margin-bottom: 10px;
}

.qoute{
    font-style: italic;
}

.reference-slider{
    display:flex;
    align-items:center;
    justify-content:center;
    gap:15px;
}

.ref-arrow{
    background:none;
    border:none;
    color:var(--aqua);
    font-size:22px;
    cursor:pointer;
    transition:0.25s;
}

.ref-arrow:hover{
    color:var(--sun-pink);
    transform:scale(1.2);
}

.reference-cards{
    width:100%;
    min-height:160px;
}

.reference-card{
    color: aqua;
    display:none;
    padding:20px;
    border:1px solid var(--aqua-trans);
    border-radius:8px;
    box-shadow:0 0 10px var(--aqua-trans);
}

.reference-card.active{
    display:block;
}

.container{
    transition: 0.4s ease;
}

.container:hover {
    transform: scale(1.01);
    box-shadow: 0 0 50px var(--aqua);
}

@media (max-width: 1024px){
body{
    overflow: auto;
}

main{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

h1{
    font-size: 8vw;
    padding: 100px 0;
    display: flex;
    text-align: center;
    color: var(--sun-pink);
    margin-bottom: 20px;
    text-decoration: underline;
    text-shadow:
        0 0 10px var(--sun-pink),
        0 0 30px var(--sun-pink);
}

#skill-grid {
    grid-template-columns: 1fr;
}

}

    


@media (max-width: 1224px){
    #about-me,
    .skill-ref {
        grid-template-columns: 1fr;
    }

    #portrait {
        max-width: 400px;
        margin: 0 auto;
    }

    .about-layout {
        padding: 0;
    }
}

